welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:18: error: value ==- is not a member of Int
		else {if (x==-1)
                           ^